--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+_site
+.sass-cache
+.jekyll-metadata
+vendor
+
 *.gem
 *.swp
 *~
@@ -5,14 +10,13 @@
 .analysis
 .bundle/
 .byebug_history
-.jekyll-metadata
 .ruby-gemset
 .ruby-version
 .sass-cache
 /test/source/file_name.txt
 /vendor
+Gemfile
 Gemfile.lock
-_site/
 bin/
 bbin/
 coverage
