--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,62 @@
-# basic options
-title: Deveb 0.1
-author: deveb
-email: your-email@domain.com
-description: Bu proje CSS'nin tüm imkanlarını zorlayarak daha gelişmiş bir önyüz iskeleti oluşturmak için geliştirilmektedir.
-twitter_username: datadeveb
-github_username:  data-deveb
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: deveb
+email: your-email@example.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Bu proje CSS'nin tüm olanaklarıyla daha gelişmiş bir önyüz çatısı 
+  (frontend framework) oluşturmak için geliştirilmektedir.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 markdown: kramdown
 theme: minima
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
+#   - vendor
+
+defaults:
+  #languages
+  -
+    scope:
+      path: ""
+    values:
+      lang: "tr"
+      layout: default
+  -
+    scope:
+      path: "en"
+    values:
+      lang: "en"
+  -
+    scope:
+      path: "de"
+    values:
+      lang: "de"
