--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ repository: data-deveb/data-deveb.github.io
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
 
