--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,18 @@ highlighter: rouge
 kramdown:
   input: GFM
 
+# Github
+lsi: false
+safe: true
+source: [your repo's top level directory]
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
+
 # theme: minima
 
 encoding: UTF-8
@@ -28,3 +40,6 @@ collections:
   # kylavuz1:
   #   output: true
   #   permalink: /1.0/:name # (işlemiyor)
+
+
+
