--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ twitter_username: datadeveb
 github_username:  data-deveb
 
 # Build settings
+highlighter: true
 markdown: kramdown
 highlighter: rouge
 kramdown:
@@ -15,7 +16,7 @@ kramdown:
 # Github
 lsi: false
 safe: true
-source: [your repo's top level directory]
+source: [/]
 incremental: false
 highlighter: rouge
 gist:
